 * #1165: Fix for when the systemd service directories (RuntimeDirectory and StateDirectory) each
   contain multiple paths.
 * #1168: Fix for the "list", "info", and "delete" options in "extra_borg_options" being ignored
   when "--archive" is omitted with Borg 1.x.
 * #1169: Fix for a regression in the ZFS, LVM, and Btrfs hooks in which partial excludes of
   snapshot paths were ignored.
 * Add a "rename" option to "extra_borg_options" to support passing arbitrary flags to "borg
   rename".

2.0.10
 * #427: Expand the "extra_borg_options" option to support passing arbitrary Borg flags to every
   Borg sub-command that borgmatic uses. As part of this, deprecate the "init" option under
   "borg_extra_options" in favor of "repo_create".
 * #942: Factor reference material out of the documentation how-to guides. This means there's now a
   whole reference section in the docs! Check it out: https://torsion.org/borgmatic/
 * #973: For the MariaDB and MySQL database hooks, add a "skip_names" option to ignore particular
   databases when dumping "all".
 * #1150: Fix for a runtime directory error when the "create" action is used with the "--log-json"
   flag.
 * #1150: Fix for a runtime directory error when the configured patterns contain a global exclude.
 * #1161: Fix a traceback (TypeError) in the "check" action with Python 3.14.
 * #1166: Add a "borg_key_file" option for setting the Borg repository key file path.
 * Add documentation search.
 * Change the URL of the local documentation development server to be more like the production URL.

2.0.9
 * #1105: More accurately collect Btrfs subvolumes to snapshot. As part of this, the Btrfs hook no
   longer uses "findmnt" and the "findmnt_command" option is deprecated.
 * #1123: Add loading of systemd credentials even when running borgmatic outside of a systemd
   service.
 * #1149: Add support for Python 3.14.
 * #1149: Include automated tests in the source dist tarball uploaded to PyPI.